ODROID-C3: arm64: configs: add odroid-c3 defconfig and dts
Change-Id: I2630a3a3d5ce9489990276ca655f37438ffdef3b

ODROID-C3: add new Hardkernel's ARMv8 based board configuration

Change-Id: I8c20c453c60698b05e3adc7160653e5996a3db9c
Signed-off-by: Dongjin Kim <tobetter@gmail.com>

ODROID-C3: config: add to enable Hardkernel's ODROID-C3 board

Change-Id: I374bed44b920583708ddb5ae719fdaf64fb24783
Signed-off-by: Dongjin Kim <tobetter@gmail.com>

ODROID-C3: arm64/dts: fix to set the model name

Change-Id: I490de55a4aae3d93940ea007ac11470cb5a641c2
Signed-off-by: Dongjin Kim <tobetter@gmail.com>

--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -17,6 +17,7 @@ dtb-y += axg_s420_v03.dtb
 dtb-y += axg_s420_v03gva.dtb
 dtb-y += common_overlay_dt.dtb
 dtb-y += g12a_pxp.dtb
+dtb-y += g12a_s905d2_odroidc3.dtb
 dtb-y += g12a_s905d2_skt.dtb
 dtb-y += g12a_s905d2_skt_buildroot.dtb
 dtb-y += g12a_s905d2_u200.dtb
