ODROID-COMMON: usb: add to control USB Host by GPIO
Change-Id: Ibc9c418bd0616ce3a723a45615c5e52bf91b0f2e
Signed-off-by: Kevin Kim <ckkim@hardkernel.com>

--- a/arch/arm64/configs/odroidn2_defconfig
+++ b/arch/arm64/configs/odroidn2_defconfig
@@ -9,3 +9,4 @@ CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_DWAV_USB_MT=y
 CONFIG_HID_BETOP_FF=y
 CONFIG_HID_MULTITOUCH=y
+CONFIG_GPIO_RESET_CONTROLLER=y
