--- a/arch/arm64/configs/odroidn2_defconfig
+++ b/arch/arm64/configs/odroidn2_defconfig
@@ -1,1 +1,7 @@
 CONFIG_ARCH_MESON64_ODROIDN2=y
+CONFIG_RT2X00=m
+CONFIG_RT2800USB=m
+# CONFIG_RT2800USB_RT33XX is not set
+# CONFIG_RT2800USB_RT35XX is not set
+CONFIG_RT2800USB_RT53XX=y
+CONFIG_RT2800USB_RT55XX=y
