--- a/arch/arm64/configs/odroidn2_defconfig
+++ b/arch/arm64/configs/odroidn2_defconfig
@@ -5,4 +5,7 @@ CONFIG_RT2800USB=m
 # CONFIG_RT2800USB_RT35XX is not set
 CONFIG_RT2800USB_RT53XX=y
 CONFIG_RT2800USB_RT55XX=y
+CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_DWAV_USB_MT=y
 CONFIG_HID_BETOP_FF=y
+CONFIG_HID_MULTITOUCH=y
