ODROID-N2: Change gpiomem feature by builtin.
Change-Id: I30db5332c2356e4407cb835edbd2868a940ca825

--- a/arch/arm64/configs/odroidn2_defconfig
+++ b/arch/arm64/configs/odroidn2_defconfig
@@ -8,6 +8,7 @@ CONFIG_RT2800USB_RT55XX=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_DWAV_USB_MT=y
 CONFIG_TOUCHSCREEN_SX8650=m
+CONFIG_AMLOGIC_GPIOMEM=y
 CONFIG_HID_BETOP_FF=y
 CONFIG_HID_MULTITOUCH=y
 CONFIG_FB_TFT=m
