--- a/arch/arm64/configs/odroidn2_defconfig
+++ b/arch/arm64/configs/odroidn2_defconfig
@@ -11,6 +11,7 @@ CONFIG_TOUCHSCREEN_SX8650=m
 CONFIG_AMLOGIC_GPIOMEM=y
 CONFIG_HID_BETOP_FF=y
 CONFIG_HID_MULTITOUCH=y
+CONFIG_RTC_DRV_PCF8563=y
 CONFIG_FB_TFT=m
 CONFIG_FB_TFT_AGM1264K_FL=m
 CONFIG_FB_TFT_BD663474=m
