media: rc: Add lirc helper to support user remote wakeup
- set user remote wakeup key
- set ir decode protocol for wakeup

Change-Id: If083545f64d4e0b9c30bed89ce4bc9ecd37ea8ac

--- a/arch/arm64/configs/odroidn2_defconfig
+++ b/arch/arm64/configs/odroidn2_defconfig
@@ -9,6 +9,11 @@ CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_DWAV_USB_MT=y
 CONFIG_TOUCHSCREEN_SX8650=m
 CONFIG_AMLOGIC_GPIOMEM=y
+CONFIG_MEDIA_RC_SUPPORT=y
+# CONFIG_RC_MAP is not set
+# CONFIG_RC_DECODERS is not set
+CONFIG_RC_DEVICES=y
+CONFIG_IR_HK_LIRC_HELPER=y
 CONFIG_HID_BETOP_FF=y
 CONFIG_HID_MULTITOUCH=y
 CONFIG_RTC_DRV_PCF8563=y
