ODROID-N2 Add some USB Serial Converter drivers.
CP210X
FTDI_SIO

Change-Id: Ib09f82c44163fd20622d268d909f42b92325b7de

--- a/arch/arm64/configs/odroidn2_defconfig
+++ b/arch/arm64/configs/odroidn2_defconfig
@@ -16,6 +16,8 @@ CONFIG_RC_DEVICES=y
 CONFIG_IR_HK_LIRC_HELPER=y
 CONFIG_HID_BETOP_FF=y
 CONFIG_HID_MULTITOUCH=y
+CONFIG_USB_SERIAL_CP210X=m
+CONFIG_USB_SERIAL_FTDI_SIO=m
 CONFIG_RTC_DRV_PCF8563=y
 CONFIG_FB_TFT=m
 CONFIG_FB_TFT_AGM1264K_FL=m
