--- a/arch/arm64/boot/dts/amlogic/g12b_a311d_w400_buildroot.dts
+++ b/arch/arm64/boot/dts/amlogic/g12b_a311d_w400_buildroot.dts
@@ -87,10 +87,16 @@
 		ion_cma_reserved:linux,ion-dev {
 			compatible = "shared-dma-pool";
 			reusable;
-			size = <0x0 0x8000000>;
+			size = <0x0 0x4C00000>;
 			alignment = <0x0 0x400000>;
 		};
-
+		ion_fb_reserved:linux,ion-fb {
+			compatible = "amlogic, ion-fb-mem";
+			reusable;
+			/* 1920x1080x4x6 round up 4M align */
+			size = <0x0 0x3400000>;
+			alignment = <0x0 0x400000>;
+		};
 		//di_reserved:linux,di {
 			//compatible = "amlogic, di-mem";
 			/* buffer_size = 3621952(yuv422 8bit) */
@@ -142,7 +148,7 @@
 			/* up to 1920x1080 yuv422 8bit and 5 buffers
 			 * 1920x1080x2x5 = 20 M
 			 */
-			size = <0x0 0x01400000>;
+			size = <0x0 0x02000000>;
 			alignment = <0x0 0x400000>;
 		};
 		galcore_reserved:linux,galcore {
