--- a/arch/arm64/boot/dts/amlogic/mesonsc2.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesonsc2.dtsi
@@ -880,7 +880,8 @@
 
 		ion_dev {
 			compatible = "amlogic, ion_dev";
-			memory-region = <&ion_cma_reserved>;
+			memory-region = <&ion_cma_reserved
+							 &ion_fb_reserved>;
 			status = "okay";
 		};/* end of ion_dev*/
 
