--- a/arch/arm64/boot/dts/amlogic/tl1_t962x2_x301_1g_drm.dts
+++ b/arch/arm64/boot/dts/amlogic/tl1_t962x2_x301_1g_drm.dts
@@ -112,6 +112,14 @@
 			alloc-ranges = <0x0 0x00000000 0x0 0x30000000>;
 		};
 
+		ion_fb_reserved:linux,ion-fb {
+			compatible = "amlogic, ion-fb-mem";
+			reusable;
+			/* 1920x1080x4x3 round up 4M align */
+			size = <0x0 0x1c00000>;
+			alignment = <0x0 0x400000>;
+		};
+
 		/*  vdin0 CMA pool */
 		//vdin0_cma_reserved:linux,vdin0_cma {
 		//	compatible = "shared-dma-pool";
