--- a/arch/arm64/boot/dts/amlogic/g12b_s922d_odroidn2.dts
+++ b/arch/arm64/boot/dts/amlogic/g12b_s922d_odroidn2.dts
@@ -28,8 +28,6 @@
 	#address-cells = <2>;
 	#size-cells = <2>;
 
-	chosen { };
-
 	aliases {
 		serial0 = &uart_AO;
 		serial1 = &uart_A;
@@ -49,7 +47,7 @@
 
 	memory@00000000 {
 		device_type = "memory";
-		linux,usable-memory = <0x0 0x000000 0x0 0x80000000>;
+		linux,usable-memory = <0x0 0x000000 0x0 0xf0000000>;
 	};
 
 	reserved-memory {
@@ -91,10 +89,16 @@
 		ion_cma_reserved:linux,ion-dev {
 			compatible = "shared-dma-pool";
 			reusable;
-			size = <0x0 0x8000000>;
+			size = <0x0 0x4C00000>;
 			alignment = <0x0 0x400000>;
 		};
-
+		ion_fb_reserved:linux,ion-fb {
+			compatible = "amlogic, ion-fb-mem";
+			reusable;
+			/* 1920x1080x4x6 round up 4M align */
+			size = <0x0 0x3400000>;
+			alignment = <0x0 0x400000>;
+		};
 		//di_reserved:linux,di {
 			//compatible = "amlogic, di-mem";
 			/* buffer_size = 3621952(yuv422 8bit) */
@@ -148,7 +152,7 @@
 			/* up to 1920x1080 yuv422 8bit and 5 buffers
 			 * 1920x1080x2x5 = 20 M
 			 */
-			size = <0x0 0x01400000>;
+			size = <0x0 0x02000000>;
 			alignment = <0x0 0x400000>;
 		};
 		galcore_reserved:linux,galcore {
@@ -176,7 +180,7 @@
 
 	cma_shrinker {
 		compatible = "amlogic, cma-shrinker";
-		status = "okay";
+		status = "disabled";
 		adj  = <0 100 200 250 900 950>;
 		free = <8192 12288 16384 24576 28672 32768>;
 	};
@@ -184,16 +188,6 @@
 	galcore {
 		status = "okay";
 		memory-region = <&galcore_reserved>;
-	};
-
-	gpioleds {
-		compatible = "gpio-leds";
-		status = "okay";
-		sys_led {
-			label="sys_led";
-			gpios=<&gpio_ao GPIOAO_11 GPIO_ACTIVE_HIGH>;
-			default-state ="on";
-		};
 	};
 
 	cvbsout {
@@ -234,7 +228,7 @@
 	bt-dev{
 		compatible = "amlogic, bt-dev";
 		dev_name = "bt-dev";
-		status = "okay";
+		status = "disabled";
 		gpio_reset = <&gpio GPIOX_17 GPIO_ACTIVE_HIGH>;
 		gpio_hostwake = <&gpio GPIOX_19 GPIO_ACTIVE_HIGH>;
 	};
@@ -242,7 +236,7 @@
 	wifi{
 		compatible = "amlogic, aml_wifi";
 		dev_name = "aml_wifi";
-		status = "okay";
+		status = "disabled";
 		interrupt_pin = <&gpio GPIOX_7 GPIO_ACTIVE_HIGH>;
 		irq_trigger_type = "GPIO_IRQ_LOW";
 		power_on_pin = <&gpio GPIOX_6 GPIO_ACTIVE_HIGH>;
@@ -479,8 +473,7 @@
 	efusekey:efusekey{
 		keynum = <1>;
 		key0 = <&key_0>;
-
-		key_0: key_0 {
+		key_0:key_0{
 			keyname = "uuid";
 			offset = <0>;
 			size = <32>;
@@ -521,7 +514,7 @@
 		compatible = "amlogic, aml_codec_T9015";
 		reg = <0x0 0xFF632000 0x0 0x2000>;
 		is_auge_used = <1>; /* meson or auge chipset used */
-		tdmout_index = <2>;
+		tdmout_index = <1>;
 		status = "okay";
 	};
 	audio_effect:eqdrc{
@@ -771,40 +764,30 @@
 		status = "okay";
 	};
 
-	custom_maps {
-		mapnum = <4>;
-		map3 = <&map_3>;
-		map_3: map_3{
-			mapname = "hardkernel-remote";
-			release_delay = <80>;
-			size  = <12>;
-			customcode = <0x4db2>;
-			keymap = <REMOTE_KEY(0xCA, KEY_UP)
-				REMOTE_KEY(0xD2, KEY_DOWN)
-				REMOTE_KEY(0xC1, KEY_RIGHT)
-				REMOTE_KEY(0x99, KEY_LEFT)
-				REMOTE_KEY(0xCE, KEY_ENTER)
-				REMOTE_KEY(0x82, KEY_HOME)
-				REMOTE_KEY(0x88, KEY_MUTE)
-				REMOTE_KEY(0xC5, KEY_MENU)
-				REMOTE_KEY(0x9A, KEY_BACK)
-				REMOTE_KEY(0x81, KEY_VOLUMEDOWN)
-				REMOTE_KEY(0x80, KEY_VOLUMEUP)
-				REMOTE_KEY(0xDC, KEY_POWER)>;
-		};
+	sensor: sensor {
+		compatible = "soc, sensor";
+		status = "okay";
+		sensor-name = "os08a10"; /*imx290;os08a10;imx227*/
+		pinctrl-names="default";
+		pinctrl-0=<&clk12_24_z_pins>;
+		clocks = <&clkc CLKID_24M>;
+		clock-names = "g12a_24m";
+		reset = <&gpio GPIOZ_12 GPIO_ACTIVE_HIGH>;
+		ir_cut_gpio = <&gpio GPIOZ_11 GPIO_ACTIVE_HIGH
+				&gpio GPIOZ_7 GPIO_ACTIVE_HIGH>;
 	};
 
-	gpiomem {
-		compatible = "amlogic, gpiomem";
-		reg = <0x0 0xff634000 0x0 0x1000>;
+	iq: iq {
+		compatible = "soc, iq";
 		status = "okay";
+		sensor-name = "os08a10"; /*imx290;os08a10;imx227*/
 	};
 
 	leds {
 		compatible = "gpio-leds";
 		blueled {
 			label = "blue:heartbeat";
-			gpios = <&gpio_ao GPIOAO_11 GPIO_ACTIVE_LOW>;
+			gpios = <&gpio_ao GPIOAO_11 GPIO_ACTIVE_HIGH>;
 			linux,default-trigger = "heartbeat";
 		};
 	};
@@ -826,11 +809,84 @@
 	};
 }; /* end of / */
 
+&custom_maps{
+	mapnum = <1>;
+	map0 = <&map_0>;
+	map_0: map_0{
+		mapname = "amlogic-remote-1";
+		customcode = <0xf708>;
+		release_delay = <80>;
+		size  = <60>;   /*keymap size*/
+		keymap = <REMOTE_KEY(0x10, KEY_0)
+			REMOTE_KEY(0x11, KEY_1)
+			REMOTE_KEY(0x12, KEY_2)
+			REMOTE_KEY(0x13, KEY_3)
+			REMOTE_KEY(0x14, KEY_4)
+			REMOTE_KEY(0x15, KEY_5)
+			REMOTE_KEY(0x16, KEY_6)
+			REMOTE_KEY(0x17, KEY_7)
+			REMOTE_KEY(0x18, KEY_8)
+			REMOTE_KEY(0x19, KEY_9)
+			REMOTE_KEY(0x1f, KEY_REPLY) /*KEY_ENTER*/
+			REMOTE_KEY(0x20, KEY_F3)
+			REMOTE_KEY(0x50, KEY_F4)
+			REMOTE_KEY(0x40, KEY_F5)
+			REMOTE_KEY(0x4d, KEY_F6)
+			REMOTE_KEY(0x96, KEY_F7)
+			REMOTE_KEY(0x29, KEY_F8)
+			REMOTE_KEY(0x77, KEY_F9)
+			REMOTE_KEY(0x78, KEY_F10)
+			REMOTE_KEY(0X88, KEY_F11)
+			REMOTE_KEY(0x30, KEY_BACKSPACE)
+			REMOTE_KEY(0x06, KEY_PROPS)
+			REMOTE_KEY(0x28, KEY_UNDO)
+			REMOTE_KEY(0x00, KEY_UP)
+			REMOTE_KEY(0x01, KEY_DOWN)
+			REMOTE_KEY(0x03, KEY_LEFT)
+			REMOTE_KEY(0x02, KEY_RIGHT)
+			REMOTE_KEY(0x53, KEY_LEFTMETA)
+			REMOTE_KEY(0x51, KEY_PAGEUP)
+			REMOTE_KEY(0x52, KEY_PAGEDOWN)
+			REMOTE_KEY(0x07, KEY_PAUSE)
+			REMOTE_KEY(0x98, KEY_HANGEUL)
+			REMOTE_KEY(0x59, KEY_HANJA)
+			REMOTE_KEY(0x1b, KEY_SCALE)
+			REMOTE_KEY(0x04, KEY_KPCOMMA)
+			REMOTE_KEY(0x0A, KEY_POWER)
+			REMOTE_KEY(0x81, KEY_TAB)
+			REMOTE_KEY(0x0D, KEY_MUTE)
+			REMOTE_KEY(0x0c, KEY_HOMEPAGE)
+			REMOTE_KEY(0x1e, KEY_FRONT)
+			REMOTE_KEY(0x80, KEY_COPY)
+			REMOTE_KEY(0x95, KEY_OPEN)
+			REMOTE_KEY(0x54, KEY_PASTE)
+			REMOTE_KEY(0x79, KEY_FIND)
+			REMOTE_KEY(0x4f, KEY_A)
+			REMOTE_KEY(0x97, KEY_B)
+			REMOTE_KEY(0x92, KEY_C)
+			REMOTE_KEY(0x4c, KEY_D)
+			REMOTE_KEY(0x93, KEY_CUT)
+			REMOTE_KEY(0x1c, KEY_BACK)
+			REMOTE_KEY(0x58, KEY_VOLUMEUP)
+			REMOTE_KEY(0x5d, KEY_VOLUMEDOWN)
+			REMOTE_KEY(0x05, KEY_RED)
+			REMOTE_KEY(0x09, KEY_GREEN)
+			REMOTE_KEY(0x42, KEY_YELLOW)
+			REMOTE_KEY(0x43, KEY_BLUE)
+			REMOTE_KEY(0x1a, KEY_MENU)
+			REMOTE_KEY(0x44, KEY_REWIND)
+			REMOTE_KEY(0x45, KEY_FASTFORWARD)
+			REMOTE_KEY(0x55, KEY_CALC)>;
+	};
+};
+
 &i2c2 {
 	status = "okay";
-	pinctrl-names="default";
-	pinctrl-0=<&i2c2_master_pins1>;
-	clock-frequency = <400000>; /* default 400k */
+	pinctrl-names = "default";
+	/* 40 Pin Header : SDA(GPIOX.17->3 Pin), SCL(GPIOX.18->5 Pin) */
+	pinctrl-0 = <&i2c2_master_pins1>;
+	/* default 400k */
+	clock-frequency = <400000>;
 };
 
 &isp {
@@ -845,8 +901,8 @@
 
 &meson_fb {
 	status = "okay";
-	display_size_default = <1080 1920 1080 3840 32>; /* portrait panel */
-	mem_size = <0x00800000 0x1980000 0x100000 0x100000 0x800000>;
+	display_size_default = <1920 1080 1920 2160 32>;
+	mem_size = <0x00800000 0x4b80000 0x100000 0x100000 0x800000>;
 	logo_addr = "0x7f800000";
 	mem_alloc = <0>;
 	pxp_mode = <0>; /** 0:normal mode 1:pxp mode */
@@ -866,9 +922,9 @@
 
 &i2c3 {
 	status = "okay";
-	pinctrl-names="default";
-	pinctrl-0=<&i2c3_master_pins2>;
-	clock-frequency = <100000>; /* default 100k */
+	pinctrl-names = "default";
+	pinctrl-0 = <&i2c3_master_pins2>;
+	clock-frequency = <100000>;		/* default 100k */
 
 	pcf8563: rtc@51 {
 		compatible = "nxp,pcf8563";
@@ -1221,7 +1277,7 @@
 /*if you want to use vdin just modify status to "ok"*/
 &vdin0 {
 	/*memory-region = <&vdin0_cma_reserved>;*/
-	status = "disable";
+	status = "okay";
 	/* up to 1920x1080 yuv422 8bit and 5 buffers
 	 * 1920x1080x2x5 = 20 M
 	 */
@@ -1237,7 +1293,7 @@
 };
 &vdin1 {
 	memory-region = <&vdin1_cma_reserved>;
-	status = "disable";
+	status = "okay";
 	/*vdin write mem color depth support:
 	 *bit0:support 8bit
 	 *bit1:support 9bit
@@ -1249,49 +1305,30 @@
 
 &sd_emmc_c {
 	status = "okay";
-	mmc-ddr-1_8v;
-	mmc-hs200-1_8v;
-	aml,skip-emmc-check;
-	aml,partition-table-offset = <2048>;
-	aml,partition-shift = <0>;
 	emmc {
 		caps = "MMC_CAP_8_BIT_DATA",
 			 "MMC_CAP_MMC_HIGHSPEED",
 			 "MMC_CAP_SD_HIGHSPEED",
 			 "MMC_CAP_NONREMOVABLE",
-			 "MMC_CAP_1_8V_DDR",
+			/* "MMC_CAP_1_8V_DDR", */
 			 "MMC_CAP_HW_RESET",
 			 "MMC_CAP_ERASE",
-			 "MMC_CAP_CMD23";
-		caps2 = "MMC_CAP2_HS200_1_8V_SDR",
-			"MMC_CAP2_BROKEN_VOLTAGE";
+			 "MMC_CAP_CMD23",
+			 "MMC_CAP_DRIVER_TYPE_A";
+		caps2 = "MMC_CAP2_HS200", "MMC_CAP2_HS400";
 		f_min = <400000>;
 		f_max = <200000000>;
-		hw_reset = <&gpio BOOT_12 GPIO_ACTIVE_HIGH>;
 	};
 };
 
 &sd_emmc_b {
 	status = "okay";
-	sd-uhs-sdr25;
-	sd-uhs-sdr50;
-	sd-uhs-sdr104;
-	max-frequency = <200000000>;
-	aml,skip-emmc-check;
-	aml,partition-table-offset = <2048>;
-	aml,partition-shift = <0>;
 	sd {
 		caps = "MMC_CAP_4_BIT_DATA",
-			 "MMC_CAP_UHS_SDR25",
-			 "MMC_CAP_UHS_SDR50",
-			 "MMC_CAP_UHS_SDR104",
 			 "MMC_CAP_MMC_HIGHSPEED",
 			 "MMC_CAP_SD_HIGHSPEED";
-		vol_switch = <&gpio_ao GPIOAO_9 GPIO_ACTIVE_HIGH>;
-		gpio_power = <&gpio_ao GPIOAO_8 GPIO_ACTIVE_HIGH>;
-		vol_switch_18 = <1>;
 		f_min = <400000>;
-		f_max = <200000000>;
+		f_max = <50000000>;
 	};
 };
 
@@ -1344,21 +1381,26 @@
 
 &spicc0 {
 	status = "okay";
+
+	/*
+	 40 Pin Header : MOSI(GPIOX.8->19 Pin), MISO(GPIOX.9->21 Pin),
+			 SPI0_CLK(GPIOX.11->23 Pin)
+			 SPI_CE0(GPIOX.2->22 Pin), SPI_CE1(GPIOX.10->24 Pin)
+	*/
 	pinctrl-names = "default";
 	pinctrl-0 = <&spicc0_pins_x>;
+
 	num_chipselect = <2>;
-	cs-gpios = <&gpio GPIOX_2 GPIO_ACTIVE_LOW>, <&gpio GPIOX_10 GPIO_ACTIVE_LOW>;
+
+	cs-gpios = <&gpio GPIOX_10 GPIO_ACTIVE_LOW>,
+		   <&gpio GPIOA_4 GPIO_ACTIVE_LOW>;
+
 	spidev@0 {
+		status = "okay";
+
 		compatible = "linux,spidev";
 		/* spi default max clock 100Mhz */
 		spi-max-frequency = <100000000>;
 		reg = <0>;
 	};
-	spidev@1 {
-		compatible = "linux,spidev";
-		/* spi default max clock 100Mhz */
-		spi-max-frequency = <100000000>;
-		reg = <1>;
-	};
 };
-
